apps/dante-crm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dante-crm
  namespace: dante
spec:
  selector:
    app: dante-crm
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  type: ClusterIP
