apps/dante-crm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dante-crm-ingress
  namespace: dante
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - crm.dante.id
      secretName: crm-dante-id-tls
  rules:
    - host: crm.dante.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dante-crm
                port:
                  number: 4000
